infra/nat_gateway.tf
#public ip

resource "azurerm_public_ip" "nat" {
  name                = "nat-gateway-pip"
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
  allocation_method   = "Static"
  sku="Standard"

}

resource "azurerm_nat_gateway" "main" {
  name                    = "nat-ekam"
  location                = azurerm_resource_group.main.location
  resource_group_name     = azurerm_resource_group.main.name
  sku_name                = "Standard"
  idle_timeout_in_minutes = 10
}

resource "azurerm_nat_gateway_public_ip_association" "main" {
  nat_gateway_id       = azurerm_nat_gateway.main.id
  public_ip_address_id = azurerm_public_ip.nat.id
}

resource "azurerm_subnet_nat_gateway_association" "backend" {
  subnet_id      = azurerm_subnet.backend.id
  nat_gateway_id = azurerm_nat_gateway.main.id
}

resource "azurerm_subnet_nat_gateway_association" "database" {
  subnet_id      = azurerm_subnet.database.id
  nat_gateway_id = azurerm_nat_gateway.main.id
}
